# AetherMind-Android

./: AT120_125_STRATEGIC_REASONING_STATUS.txt  AT131_140_V5_STRICT_CHECK_REPORT.txt  AT145_INTEGRATION_NOTES.md  AT163_CONSOLIDATED_WORKFLOW.md  AT168_CORE_CLEAN_SURGERY.md  AT51_53_CHECKLIST.txt  AT60_SECURITY_CHECKLIST.txt  AT61_70_CHECKLIST.txt  AT80_85_CHECKLIST.txt  AT90_95_CHECKLIST.txt  BLOCK_A_INTELLIGENCE_CORE_STATUS.txt  BLOCK_B_PRODUCTION_HARDENING_STATUS.txt  BOT_APPLY_AT145_GITHUB_ACTIONS.md  BOT_LABEL.txt  BUILD_NOTES.txt  CLOUD_GITHUB_HANDOFF.txt  FINAL_BUILD_NOTES.txt  FINAL_TERMUX_TEST_GUIDE.md  MASTER_ROADMAP_5_PHASE_BLOCKS.md  PHASE10_EXTERNAL_TEST_STATUS.txt  PHASE10_RELEASE_STATUS.txt  PHASE3_LOCK_STATUS.txt  PHASE4_CONTEXT_STATUS.txt  PHASE4_FINAL_STATUS.txt  PHASE4_LOCK_STATUS.txt  PHASE4_WORLD_STATUS.txt  PHASE5_FINAL_STATUS.txt  PHASE5_LEARNING_BATCH_STATUS.txt  PHASE5_LOCK_STATUS.txt  PHASE6_FINAL_STATUS.txt  PHASE6_SECURITY_STATUS.txt  PHASE7_START_STATUS.txt  PHASE8_UX_STATUS.txt  PHASE9_QA_STATUS.txt  README.md  README_APK_INTEGRATION.md  RELEASE_CANDIDATE_NOTES.txt  RELEASE_REVIEW_RESOLUTION.txt  TERMUX_CHECK_REPORT.txt  TERMUX_GRADLE_FIX_NOTES.md  (+2 more)
.github/workflows/: build-apk.yml
AetherMindCore/: CMakeLists.txt
AetherMindCore/android_bridge/cpp/: CMakeLists.txt  aether_trajectory_jni.cpp
AetherMindCore/android_bridge/kotlin/com/aether/renderer/: AetherTrajectorySurfaceView.kt  NativeTrajectoryBridge.kt  PhysicsExperienceStateReader.kt
AetherMindCore/cmake/: CoreSources.cmake
AetherMindCore/include/aether/core/: AetherMind.h  CoreVersion.h  MindTypes.h  SkillProfile.h
AetherMindCore/include/aether/foundation/: Vec2.h
AetherMindCore/include/aether/humanizer/: Humanizer.h
AetherMindCore/include/aether/memory/: ExperienceMemory.h  MemorySchema.h
AetherMindCore/include/aether/physics/: PhysicsKernel.h
AetherMindCore/include/aether/planning/: ActionGenerator.h  CemPlanner.h  Evaluator.h  Planner.h
AetherMindCore/include/aether/render/: NativeTrajectoryBridge.h
AetherMindCore/include/aether/runtime/: BrainRuntime.h  IntegrationLoop.h
AetherMindCore/include/aether/security/: OmnisGate.h
AetherMindCore/include/aether/storage/: StorageManager.h
AetherMindCore/include/aether/strategy/: Strategist.h
AetherMindCore/include/aether/update/: UpdateManager.h  UpdateManifest.h
AetherMindCore/include/aether/world/: WorldBuilder.h  WorldState.h
AetherMindCore/scripts/: build_termux.sh  check_core.sh  clean.sh  clean_verify.sh
AetherMindCore/src/cognition/: ExecutionModel.cpp
AetherMindCore/src/core/: AetherMind.cpp
AetherMindCore/src/humanizer/: Humanizer.cpp
AetherMindCore/src/memory/: ExperienceMemory.cpp  MemoryStore.cpp
AetherMindCore/src/physics/: PhysicsKernel.cpp
AetherMindCore/src/planning/: ActionGenerator.cpp  CemPlanner.cpp  DecisionPolicy.cpp  Evaluator.cpp  Planner.cpp
AetherMindCore/src/render/: NativeTrajectoryBridge.cpp
AetherMindCore/src/runtime/: BrainRuntime.cpp  IntegrationLoop.cpp  OmnisGate.cpp
AetherMindCore/src/storage/: StorageManager.cpp
AetherMindCore/src/strategy/: Strategist.cpp
AetherMindCore/src/update/: UpdateManifest.cpp
AetherMindCore/src/world/: WorldBuilder.cpp
AetherMindCore/tools/: aether_console.cpp
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ExecutionBridge.h
app/src/main/cpp/aether_core/cmake/: CoreSources.cmake
app/src/main/cpp/aether_core/include/aether/cognition/: ExecutionModel.h
app/src/main/cpp/aether_core/include/aether/core/: AetherMind.h
app/src/main/cpp/aether_core/include/aether/humanizer/: Humanizer.h
app/src/main/cpp/aether_core/include/aether/memory/: MemoryStore.h
app/src/main/cpp/aether_core/include/aether/planning/: DecisionPolicy.h
app/src/main/cpp/aether_core/include/aether/pool/geometry/: CutAngleSolver.h  GhostBallSolver.h  PoolGeometryEngine.h  PoolGeometryTypes.h  Vec2.h
app/src/main/cpp/aether_core/include/aether/world/: ValidationReport.h  WorldState.h  WorldStateValidator.h
app/src/main/cpp/aether_core/src/core/: AetherMind.cpp
app/src/main/cpp/aether_core/src/humanizer/: Humanizer.cpp
app/src/main/cpp/aether_core/src/pool/geometry/: CutAngleSolver.cpp  GhostBallSolver.cpp  PoolGeometryEngine.cpp
app/src/main/cpp/aether_core/src/runtime/: IntegrationLoop.cpp
app/src/main/cpp/aether_core/src/update/: UpdateManager.cpp
app/src/main/cpp/aether_core/src/world/: WorldBuilder.cpp  WorldStateValidator.cpp
app/src/main/cpp/execution/: ActionCommandSchema.h  ExecutionBridge.cpp  aether_execution_jni.cpp
app/src/main/cpp/vision/: TrajectoryEngine.cpp  TrajectoryEngine.h  VisionProcessor.h  VisionProcessorImpl.cpp  aether_vision_jni.cpp
app/src/main/java/com/aether/renderer/: ActionIntentModel.kt  AdaptivePolicy.kt  AetherIntegrationLoop.kt  AetherOverlayService.kt  AetherRuntimeBus.kt  AnchorMemory.kt  ArtifactCleaner.kt  AuditHardening.kt  AuditTrail.kt  BaselineVerifier.kt  BehaviorProfile.kt  BuildMatrix.kt  ConfidenceSmoother.kt  ContextEngine.kt  CrashDiagnostics.kt  NodeAnchor.kt  (+96 more)
app/src/main/res/layout/: activity_main.xml  layout_aether_hud.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: aether_accessibility_service.xml
qa/: run_all_qa_checks.sh  run_layout_checks.sh  run_phase_lock_checks.sh  run_privacy_checks.sh  run_static_checks.sh
scripts/: check_jni_symbols.sh
termux/: 00_prepare_gradle_8_10_2.sh  01_static_checks.sh  02_privacy_checks.sh  03_qa_checks.sh  04_optional_android_build.sh  05_make_local_manifest.sh  06_clean_build_cache.sh  run_all_termux_checks.sh
(+25 files in other folders)
